# nz-stream-depletion

./: README.md  README.rst  pyproject.toml  readthedocs.yml  requirements.txt  requirements_tests.txt  setup.py
.github/workflows/: python-package-test.yml
conda/: meta.yaml
nz_stream_depletion/: __init__.py  main.py  methods.py
nz_stream_depletion/data/: sample_flow.csv
nz_stream_depletion/tests/: __init__.py  test_sd.py  utest_sd.py
resources/: README.rst  Streamdepletionv4.XLSM
sphinx/: env.yml
sphinx/source/: conf.py  index.rst  installation.rst  license-terms.rst  methods.rst  package_references.rst  usage.rst
sphinx/source/img/: ward_lough_2011.xcf
